Fixed some overflow problems in home page

--- a/static/css/efforia.css
+++ b/static/css/efforia.css
@@ -1,6 +1,14 @@
 @font-face { font-family: 'Ubuntu'; src: url('/static/ttf/ubuntul.ttf'); }
 @font-face { font-family: 'Ubuntu'; src: url('/static/ttf/ubuntu-bold.ttf'); font-weight: bold; }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 body { font-family:Ubuntu; }
 h1,h2,h3,h4,h5,h6,ul.nav { font-family: Ubuntu; font-weight:bold; }
 a,a:hover,a:active,a:focus { text-decoration:none !important; }
